Dark Mode Done + Misc SCSS Fixes

--- a/src/app/pages/assist/assist.page.scss
+++ b/src/app/pages/assist/assist.page.scss
@@ -36,3 +36,6 @@ ion-icon {
   }
 }
 
+body.dark ion-content::part(scroll) {
+  background: var(--ion-background-color);
+}
