--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -54,7 +54,7 @@
 
 .fab-wrapper {
   position: absolute;
-  top: -6px;
+  top: -8px;
   left: 8px;
   z-index: 10;
 }
